[package]
name = "pbr"
version = "1.0.3"
authors = ["Ariel Mashraki <ariel@mashraki.co.il>", "Steven Fackler <sfackler@gmail.com>"]
description = "Console progress bar for Rust"
documentation = "http://a8m.github.io/pb/doc/pbr/index.html"
repository = "https://github.com/a8m/pb"
exclude = ["gif/", ".travis.yml"]
keywords = ["cli", "progress", "terminal", "pb"]
license = "MIT"

[dependencies]
libc = "0.2"
time = "0.1"
crossbeam-channel = "0.4"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["wincon", "processenv", "winbase"]

[dev-dependencies]
rand = "0.7"
