[package]
name = "pbr"
version = "1.1.1"
authors = ["Ariel Mashraki <ariel@mashraki.co.il>", "Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
description = "Console progress bar for Rust"
documentation = "https://a8m.github.io/pb/doc/pbr/index.html"
repository = "https://github.com/a8m/pb"
exclude = ["gif/"]
keywords = ["cli", "progress", "terminal", "pb"]
license = "MIT"

[dependencies]
libc = "0.2"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["wincon", "processenv", "winbase"]

[dev-dependencies]
rand = "0.8"
